[project]
name = "modal-deepseek-v3"
version = "0.1.0"
description = "Self-host a DeepSeek v3 Inference API on Modal.com"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.27.1",
    "modal>=0.71.10",
    "openai>=1.59.5",
    "python-dotenv>=1.0.1",
    "vllm>=0.6.6.post1",
]
